# volai-oscilloscope-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements-base.txt  requirements-huggingface.txt  requirements.txt  setup.py
debug/: debug_huggingface_model.py  debug_screen_capture.py
docs/: README.md
docs/getting-started/: huggingface-quickstart.md  mcp-quickstart.md  quickstart.md  web-interface.md
docs/guides/: architecture.md  lazy-loading.md  web-interface-guide.md
docs/integrations/: huggingface-models.md  mcp-setup.md
docs/reference/: huggingface-changes.md  huggingface-integration.md  project-summary.md
examples/: README.md  agent_demo.py  agent_demo_huggingface.py  agent_demo_offline.py  basic_control.py  mcp_client.py
src/: __init__.py
src/agent/: __init__.py  agent.py  llm_wrapper.py  prompts.py
src/mcp_server/: __init__.py  resources.py  server.py  tools.py
src/oscilloscope/: __init__.py  commands.py  driver.py  models.py
tests/: __init__.py  test_driver.py
